--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,27 +6,19 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        our_db_provider:
-            entity:
-                class: App\Entity\User
-                property: username
+       app_user_provider:
+           entity:
+               class: App\Entity\User
+               property: username
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+
         main:
             pattern: ^/
-            provider: our_db_provider
-            anonymous: ~
+            provider: app_user_provider
             form_login:
+              # "login" is the name of the route created previously
                 login_path: login
                 check_path: login
-            logout_on_user_change: true
-
-        encoders:
-            App/Entity\User:
-                algorithm:  bcrypt
-
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -34,7 +26,7 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
-    # Easy way to control access for large section  s of your site
+    # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
