--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,10 @@ security:
               # "login" is the name of the route created previously
                 login_path: login
                 check_path: login
+            logout:
+                path: logout
+                target: home
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
