--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
         "symfony/security-csrf": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
-        "symfony/var-dumper": "5.3.*",
         "symfony/yaml": "5.3.*",
+        "twbs/bootstrap": "5.1.3",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
@@ -80,6 +80,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/debug-bundle": "5.3.*",
         "symfony/stopwatch": "5.3.*",
+        "symfony/var-dumper": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*"
     }
 }
